[Bug #19034] No runtime check for `utimensat` if unavailable